# data-classification-app

./: .all-contributorsrc  .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  MANIFEST.in  Makefile  README.md  build_docker.sh  classification_question_sets.json  conftest.py  data_classification_questions.yml  deploy.cmd  deploy_linux.sh  devapplication.json  devsuperuser.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  ethics_app.md  guidance_to_html.py  haven_start.sh  ig_app_project_webpage.md  init-letsencrypt.sh  letsencrypt-nginx.yml  local.yml  manage.py  package-lock.json  package.json  prod.yml  (+10 more)
.envs/.local/: .django  .postgres
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-issue-template.md  user-story-issue-template.md
.github/workflows/: ci.yml
.travis/: deploy_key.enc  deploy_key.pub
authelia/: configuration.template.yml  configuration.yml  entrypoint.sh  setup-config.sh  users_database.yml
deployment/: .env.example  provision.sh
docs/: pull_request_template.md
docs/authentication/: providers.md  social-providers.md
docs/create-management-webapp/: azure-deploy-management-webapp.md
docs/create-users/: create-users.md  example_user_form.csv
docs/deployment/: .env.example  dc-app-with-authelia.md  oauth.md  remote_ldap_authentication.md  social_authentication.md
docs/developer_guide/: local_deployment.md
docs/development/: create-staging-server-on-azure.md  local-development-notes.md  set-up-local-development.md
docs/ethical-approval/: ethics_app.md
docs/test-data/: classification_question_sets.json  setup.md
docs/user-testing/: access-staging-server.md  setup.md  test-data.json
docs/user_guide/: Developer set-up local.docx  adding_question_sets.md  user_guide.md  ~$veloper set-up local.docx
docs/website/: ig_app_project_webpage.md
haven/: .coveragerc  __init__.py  _version.py  manage.py  oauth_urls.py  prestart.sh  urls.py  uwsgi.ini  wsgi.py
haven/api/: admin.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
haven/config/: urls.py
haven/core/: apiv1_urls.py  context_processors.py  forms.py  recipes.py  utils.py  views.py
haven/data/: admin.py  apps.py  classification.py  forms.py  managers.py  models.py  tiers.py  utils.py
haven/identity/: admin.py  (+14 more)
nginx/: Dockerfile  LetsencryptDockerfile  auth.conf  entrypoint.sh  letsencrypt-entrypoint.sh  letsencrypt.conf  nginx.conf  ssl.conf
requirements/: Makefile  base.in  base.txt  dev.in  dev.txt  local.in  local.txt  production.in  production.txt  test.in  test.txt
scripts/: .env.example  deploy_code.sh  permissions.json  provision.sh  register.sh  update_code.sh
static/: gulpfile.js  package-lock.json  package.json
user_testing/: Informed Consent Form.docx  analysis_template.md  user_introduction.md  user_testing_guidance_template.md
(+309 files in other folders)
