[tool.poetry]
name = "data-safe-haven-webapp"
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>", "Rebecca Osselton"]

[tool.poetry.dependencies]
python = "^3.8"
asn1crypto = "^1.4.0"
Babel = "^2.9.1"
beautifulsoup4 = "^4.10.0"
bleach = "^4.1.0"
certifi = "^2021.10.8"
cffi = "^1.15.0"
chardet = "^4.0.0"
cryptography = "^35.0.0"
defusedxml = "^0.7.1"
Django = "3.1.13"
django-bleach = "^0.9.0"
django-braces = "^1.14.0"
django-cors-headers = "^3.11.0"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.8.1"
django-formtools = "^2.3"
django-oauth-toolkit = "^2.0.0"
django-phonenumber-field = "^5.2.0"
djangorestframework = "^3.12.4"
django-simple-history = "^3.0.0"
django-source-revision = "^0.1.0"
django-tables2 = "^2.4.1"
django-taggit = "^1.5.1"
et-xmlfile = "^1.1.0"
idna = "^3.3"
jdcal = "^1.4.1"
oauthlib = "^3.1.1"
openpyxl = "^3.0.9"
phonenumbers = "^8.12.36"
psycopg2 = "^2.9.1"
pycparser = "^2.20"
PyJWT = "^2.3.0"
python3-openid = "^3.2.0"
pytz = "^2021.3"
requests-oauthlib = "^1.3.0"
requests = "^2.26.0"
six = "^1.16.0"
soupsieve = "^2.2.1"
sqlparse = "^0.4.2"
urllib3 = "^1.26.7"
webencodings = "^0.5.1"
whitenoise = "^5.3.0"
django-easyaudit-utils = "^0.0.6"
django-easy-audit = "^1.3.2"
django-autocomplete-light = "3.5.1"
sentry-sdk = "^1.5.11"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
Django = "3.1.13"
cryptography = "^35.0.0"
django-bleach = "^0.9.0"
django-braces = "^1.14.0"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.8.1"
django-formtools = "^2.3"
django-phonenumber-field = "^5.2.0"
django-simple-history = "^3.0.0"
django-source-revision = "^0.1.0"
django-tables2 = "^2.4.1"
django-taggit = "^1.5.1"
django-test-migrations = "^1.2.0"
openpyxl = "^3.0.9"
phonenumbers = "^8.12.36"
pycparser = "^2.20"
requests-oauthlib = "^1.3.0"
whitenoise = "^5.3.0"
pluggy = "^1.0.0"
asn1crypto = "^1.4.0"
atomicwrites = "^1.4.0"
attrs = "^21.2.0"
Babel = "^2.9.1"
beautifulsoup4 = "^4.10.0"
bleach = "^4.1.0"
certifi = "^2021.10.8"
cffi = "^1.15.0"
chardet = "^4.0.0"
coverage = "^6.0.2"
defusedxml = "^0.7.1"
et-xmlfile = "^1.1.0"
flake8 = "^4.0.1"
idna = "^3.3"
importlib-metadata = "^4.8.1"
ipdb = "^0.13.9"
isort = "^5.9.3"
jdcal = "^1.4.1"
model-bakery = "^1.3.3"
more-itertools = "^8.10.0"
oauthlib = "^3.1.1"
packaging = "^21.0"
psycopg2 = "^2.9.1"
py = "^1.10.0"
PyJWT = "^2.3.0"
pyparsing = "^3.0.3"
pytest-cov = "^3.0.0"
pytest-django = "^4.4.0"
pytz = "^2021.3"
requests = "^2.26.0"
six = "^1.16.0"
soupsieve = "^2.2.1"
sqlparse = "^0.4.2"
urllib3 = "^1.26.7"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
zipp = "^3.6.0"
django-easyaudit-utils = "^0.0.6"
django-easy-audit = "^1.3.2"
black = "^21.10b0"
mypy = "^0.910"
bandit = "^1.7.0"


[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
